# dadapush-c-client

./: CMakeLists.txt  README.md
api/: DaDaPushMessageAPI.c  DaDaPushMessageAPI.h
model/: action.c  action.h  message_object.c  message_object.h  message_push_request.c  message_push_request.h  message_push_response.c  message_push_response.h  page_response_of_message_object.c  page_response_of_message_object.h  result.c  result.h  result_of_message_object.c  result_of_message_object.h  result_of_message_push_response.c  result_of_message_push_response.h  result_of_page_response_of_message_object.c  result_of_page_response_of_message_object.h
src/: apiClient.c
